--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林), server: 213.183.53.202, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 172.99.188.71, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-154.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.68.135.19, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.59.218, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.68.135.19, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇳🇱 荷兰-1.81MB/s(Youtube:不良林), server: 213.183.59.185, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇩🇪 德国-1.99MB/s(Youtube:不良林), server: 5.183.179.141, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-263.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 波兰-154.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-204.5KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
