--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.04MB/s(Youtube:不良林), server: 213.183.59.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇩🇪 德国-2.43MB/s(Youtube:不良林), server: 5.183.179.166, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-1.01MB/s(Youtube:不良林), server: 213.183.59.218, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇳🇱 荷兰-1.58MB/s(Youtube:不良林), server: 213.183.51.172, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 172.99.188.71, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林), server: 213.183.53.202, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.19, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 38.68.135.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 169.197.142.39, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-244.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
